--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ seaborn
 matplotlib
 scikit-learn
 scipy
--e .
+dill
+#-e .
 # -e . is used to install the package in editable mode, allowing for easy development and testing.
